Fixed scrollbar display bug.

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y:scroll;
+}
+
 body {
   background: #ffffff;
   font-family: 'Lato', sans-serif; 
